testsuite/tests/parser/should_fail/all.T

test('readFail001', normal, compile_fail, [''])
test('readFail002', normal, compile_fail, [''])
test('readFail003', normal, compile_fail, [''])
test('readFail004', normal, compile_fail, [''])
test('readFail005', normal, compile_fail, [''])
test('readFail006', normal, compile_fail, [''])
test('readFail007', normal, compile_fail, [''])
test('readFail008', normal, compile_fail, [''])
test('readFail009', normal, compile_fail, [''])
# test10: missing
test('readFail011', normal, compile_fail, [''])
test('readFail012', normal, compile_fail, [''])
test('readFail013', normal, compile_fail, [''])
test('readFail014', normal, compile_fail, [''])
test('readFail015', normal, compile_fail, [''])
test('readFail016', normal, compile_fail, [''])
test('readFail017', normal, compile_fail, [''])
test('readFail018', normal, compile_fail, [''])
test('readFail019', normal, compile_fail, [''])
test('readFail020', normal, compile_fail, [''])

# empty file (length zero) is not a legal Haskell module.  It fails to compile
# because it doesn't contain a definition of Main.main.  GHC 5.02 crashed
# on this example.
test('readFail021', normal, compile_fail, [''])

test('readFail022', normal, compile_fail, [''])
test('readFail023', normal, compile_fail, [''])
test('readFail024', normal, compile_fail, [''])
test('readFail025', normal, compile_fail, [''])
test('readFail026', normal, compile_fail, [''])
test('readFail027', normal, compile_fail, [''])
test('readFail028', normal, compile_fail, [''])
test('readFail029', normal, compile_fail, [''])
test('readFail030', normal, compile_fail, [''])
test('readFail031', normal, compile_fail, [''])
# N.B. readFail032 and readFail048 used to fail on Darwin
# due to a toolchain bug (#15662). This appears to be fixed in
# Mojave but will likely still fail on earlier releases.
test('readFail032', normal, compile_fail, ['-cpp'])
test('readFail033', normal, compile_fail, [''])
test('readFail034', normal, compile_fail, [''])
test('readFail035', normal, compile_fail, [''])
test('readFail036', normal, compile_fail, [''])
test('readFail037', normal, compile_fail, [''])
test('readFail038', normal, compile_fail, [''])
test('readFail039', normal, compile_fail, [''])
test('readFail040', normal, compile_fail, [''])
test('readFail041', normal, compile_fail, [''])
test('readFail042', normal, compile_fail, [''])
test('readFail043', normal, compile_fail, [''])
test('readFail044', normal, compile_fail, [''])
test('readFail046', normal, compile_fail, [''])
test('readFail047', normal, compile_fail, [''])
# See comment attached to readFail032 above.
test('readFail048', normal, compile_fail, ['-cpp -haddock'])
test('T3095', normal, compile_fail, [''])
test('T3153', normal, compile_fail, [''])
test('T3751', normal, compile_fail, [''])

test('position001', normal, compile_fail, [''])
test('position002', normal, compile_fail, ['-Wno-tabs'])

test('T1344a', normal, compile_fail, [''])
test('T1344b', normal, compile_fail, [''])
test('T1344c', normal, compile_fail, [''])
test('T3811', normal, compile_fail, [''])
test('T3811b', normal, compile_fail, [''])
test('T3811c', normal, compile_fail, [''])
test('T3811d', normal, compile_fail, [''])
test('T3811e', normal, compile_fail, [''])
test('T3811f', normal, compile_fail, [''])
test('T3811g', normal, compile_fail, [''])
test('NoDoAndIfThenElse', normal, compile_fail, [''])
test('NoPatternSynonyms', normal, compile_fail, [''])
test('NoBlockArgumentsFail', normal, compile_fail, [''])
test('NoBlockArgumentsFail2', normal, compile_fail, [''])
test('NoBlockArgumentsFail3', normal, compile_fail, [''])
test('NoBlockArgumentsFailArrowCmds', normal, compile_fail, [''])
test('NondecreasingIndentationFail', normal, compile_fail, [''])
test('readFailTraditionalRecords1', normal, compile_fail, [''])
test('readFailTraditionalRecords2', normal, compile_fail, [''])
test('readFailTraditionalRecords3', normal, compile_fail, [''])
test('ParserNoForallUnicode', normal, compile_fail, [''])
test('ParserNoLambdaCase', [], compile_fail, [''])
test('ParserNoMultiWayIf', [], compile_fail, [''])
test('ParserNoBinaryLiterals1', normal, compile_fail, [''])
test('ParserNoBinaryLiterals2', normal, compile_fail, [''])
test('ParserNoBinaryLiterals3', normal, compile_fail, [''])

test('T5425', normal, compile_fail, [''])
test('T984', normal, compile_fail, [''])
test('T7848', normal, compile_fail, ['-dppr-user-length=100'])
test('ExportCommaComma', normal, compile_fail, [''])
test('T8258NoGADTs', normal, compile_fail, [''])
test('T8430', literate, compile_fail, [''])
test('T8431', compile_timeout_multiplier(0.05),
     compile_fail, ['-XAlternativeLayoutRule'])
test('T8506', normal, compile_fail, [''])
test('T9225', normal, compile_fail, [''])
test('T10196Fail1', normal, compile_fail, [''])
test('T10196Fail2', normal, compile_fail, [''])
test('T10498a', normal, compile_fail, [''])
test('T10498b', normal, compile_fail, [''])
test('T12051', normal, compile_fail, [''])
test('T12429', normal, compile_fail, [''])
test('T12811', normal, compile_fail, [''])
test('T13260', normal, compile_fail, [''])
test('T13414', literate, compile_fail, [''])
test('T8501a', normal, compile_fail, [''])
test('T8501b', normal, compile_fail, [''])
test('T8501c', normal, compile_fail, [''])
test('T12045d', normal, compile_fail, [''])
test('T12610', normal, compile_fail, [''])
test('T13450', normal, compile_fail, [''])
test('T13450TH', normal, compile_fail, [''])
test('T14588', normal, compile_fail, [''])
test('T14740', normal, compile_fail, [''])
test('T15209', normal, compile_fail, [''])

test('NoNumericUnderscores0', normal, compile_fail, [''])
test('NoNumericUnderscores1', normal, compile_fail, [''])
test('NumericUnderscoresFail0',
     grep_errmsg(r'^NumericUnderscoresFail0.hs:'), compile_fail, [''])
test('NumericUnderscoresFail1',
     grep_errmsg(r'^NumericUnderscoresFail1.hs:'), compile_fail, [''])

test('InfixAppPatErr', normal, compile_fail, [''])

test('typeops_A', normal, compile_fail, [''])
test('typeops_B', normal, compile_fail, [''])
test('typeops_C', normal, compile_fail, [''])
test('typeops_D', normal, compile_fail, [''])
test('T15053', normal, compile_fail, [''])
test('T15233', normal, compile_fail, [''])
test('T15849', normal, compile_fail, [''])
test('typeopsDataCon_A', normal, compile_fail, [''])
test('typeopsDataCon_B', normal, compile_fail, [''])
test('strictnessDataCon_A', normal, compile_fail, [''])
test('strictnessDataCon_B', normal, compile_fail, [''])
test('unpack_empty_type', normal, compile_fail, [''])
test('unpack_inside_type', normal, compile_fail, [''])
test('unpack_before_opr', normal, compile_fail, [''])
test('T16270', normal, compile_fail, [''])
test('T16270h', normal, compile_fail, [''])
test('cmdFail001', normal, compile_fail, [''])
test('cmdFail002', normal, compile_fail, [''])
test('cmdFail003', normal, compile_fail, [''])
test('cmdFail004', normal, compile_fail, [''])
test('cmdFail005', normal, compile_fail, [''])
test('cmdFail006', normal, compile_fail, [''])
test('cmdFail007', normal, compile_fail, [''])
test('cmdFail008', normal, compile_fail, [''])
test('cmdFail009', normal, compile_fail, [''])
test('patFail001', normal, compile_fail, [''])
test('patFail002', normal, compile_fail, [''])
test('patFail003', normal, compile_fail, [''])
test('patFail004', normal, compile_fail, [''])
test('patFail005', normal, compile_fail, [''])
test('patFail006', normal, compile_fail, [''])
test('patFail007', normal, compile_fail, [''])
test('patFail008', normal, compile_fail, [''])
test('patFail009', normal, compile_fail, [''])
test('T17162', normal, compile_fail, [''])
test('proposal-229c', normal, compile_fail, [''])
test('T15730', normal, compile_fail, [''])
test('T15730b', normal, compile_fail, [''])
test('T18130Fail', normal, compile_fail, [''])
test('T18251a', normal, compile_fail, [''])
test('T18251b', normal, compile_fail, [''])
test('T18251c', normal, compile_fail, [''])
test('T18251e', normal, compile_fail, [''])
test('T18251f', normal, compile_fail, [''])
test('T12446', normal, compile_fail, [''])
test('T17045', normal, compile_fail, [''])
test('RecordDotSyntaxFail0', normal, compile_fail, [''])
test('RecordDotSyntaxFail1', normal, compile_fail, [''])
test('RecordDotSyntaxFail2', normal, compile_fail, [''])
test('RecordDotSyntaxFail3', normal, compile_fail, [''])
test('RecordDotSyntaxFail4', normal, compile_fail, [''])
test('RecordDotSyntaxFail5', normal, compile_fail, [''])
test('RecordDotSyntaxFail6', [extra_files(['RecordDotSyntaxA.hs'])], multimod_compile_fail, ['RecordDotSyntaxFail6', ''])
test('RecordDotSyntaxFail7', [extra_files(['RecordDotSyntaxA.hs'])], multimod_compile_fail, ['RecordDotSyntaxFail7', ''])
test('RecordDotSyntaxFail8', normal, compile_fail, [''])
test('RecordDotSyntaxFail9', normal, compile_fail, [''])
test('RecordDotSyntaxFail10', normal, compile_fail, [''])
test('RecordDotSyntaxFail11', normal, compile_fail, [''])
test('RecordDotSyntaxFail12', normal, compile_fail, [''])
test('RecordDotSyntaxFail13', normal, compile_fail, [''])
test('T18251d', normal, compile_fail, [''])
test('T19504', normal, compile_fail, [''])
test('T19928', normal, compile_fail, [''])
test('T19923a', normal, compile_fail, [''])
test('T19923b', normal, compile_fail, [''])
test('T19923c', normal, compile_fail, [''])
test('RecordWildCardsFail', normal, compile_fail, [''])
test('ViewPatternsFail', normal, compile_fail, [''])
test('ParserNoTH1', normal, compile_fail, [''])
test('ParserNoTH2', normal, compile_fail, [''])
test('T17865', normal, compile_fail, [''])
test('T20654a', normal, compile_fail, [''])
test('T20654b', normal, compile_fail, [''])
